# my_bevy_start

./: .gitignore  Cargo.toml  README.md  build.rs  manifest.yaml  pittfalls.txt
assets/: simpleHumanRig.blend  simpleHumanRig.glb  simpleWall.glb
src/: asset_handler.rs  lib.rs  main.rs
