[package]
name = "my_bevy_start"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oelison/my_bevy_start"
publish = false

[dependencies]
# common (desktop / linux) features
bevy = { version = "0.17.2", default-features = false, features = [
    "zstd_rust", "jpeg", "png", "bevy_gltf", "bevy_scene", "animation", "multi_threaded", "tonemapping_luts"
] }
bevy_gizmos = "0.17.2"
bevy_mod_openxr = "0.4.0"
bevy_mod_xr = "0.4.0"
bevy_xr_utils = "0.4.0"
openxr = "0.19.0"
schminput = { path = "../Schminput", features = ["xr"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android-only features (won't be compiled on Linux)
bevy = { version = "0.17.2", default-features = false, features = [
    "android-native-activity",
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_shader",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "jpeg",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "zstd_rust",
    "debug",
] }
bevy_gizmos = "0.17.2"
bevy_mod_openxr = { version = "0.4.0", features = [
    "window_support",
    "fb_passthrough",
] }
bevy_mod_xr = "0.4.0"
bevy_xr_utils = "0.4.0"
openxr = "0.19.0"
schminput = { path = "../Schminput", features = ["xr"] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"

[lib]
name="my_bevy_start"
crate-type = ["rlib", "cdylib"]

#[[bin]]
#path="src/lib.rs"
#name="my_bevy_start"

# This metadata is used by `cargo-apk` - `xbuild` uses the `manifest.yaml` instead.
[package.metadata.android]
package = "de.sciphy.my_bevy_start"
build_targets = ["aarch64-linux-android"]
runtime_libs = "runtime_libs"
apk_name = "my_bevy_start"
assets = "assets"
res = "assets/android-res"
icon = "@mipmap/ic_launcher"
label = "My Bevy start"
strip = "strip"

[package.metadata.android.sdk]
target_sdk_version = 36

[package.metadata.android.application.activity]
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true

[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.PASSTHROUGH"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.experimental.enabled"
required = true

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "com.oculus.intent.category.VR",
    "android.intent.category.LAUNCHER",
    "org.khronos.openxr.intent.category.IMMERSIVE_HMD",
]

[package.metadata.android.signing.release]
path = "../../../keystore.jks"
keystore_password = "test1234"
