[package]
name = "my_bevy_start"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oelison/my_bevy_start"
publish = false

# common (desktop / linux) features
[dependencies]
bevy_ecs = "0.18.0"
bevy_gizmos = "0.18.0"
bevy_mod_openxr = { version = "0.5.0", features = [
    "window_support",
    "fb_passthrough",
] }
bevy_mod_xr = "0.5.0"
bevy_xr_utils = "0.5.0"
openxr = "0.21.1"
schminput = { version = "0.5.0", features = ["xr"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
audio = "0.2.1"
bevy = {version = "0.18.0" }

[target.'cfg(target_os = "android")'.dependencies]
# Android-only features (won't be compiled on Linux)
bevy = { version = "0.18", default-features = false, features = [
    "android-native-activity",
    "default_app",
    "std",
    "default_font",
    "multi_threaded",
    "sysinfo_plugin",
    "2d_bevy_render",
    "scene",
    #"audio", # not working on android native
    "picking",
    "3d_bevy_render",
    "ui_api",
    "ui_bevy_render",
] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"

[lib]
name="my_bevy_start"
crate-type = ["rlib", "cdylib"]

#[[bin]]
#path="src/lib.rs"
#name="my_bevy_start"

# This metadata is used by `cargo-apk` - `xbuild` uses the `manifest.yaml` instead.
[package.metadata.android]
package = "de.sciphy.my_bevy_start"
build_targets = ["aarch64-linux-android"]
runtime_libs = "runtime_libs"
apk_name = "my_bevy_start"
assets = "assets"
res = "assets/android-res"
icon = "@mipmap/ic_launcher"
label = "My Bevy start"
strip = "strip"

[package.metadata.android.sdk]
target_sdk_version = 36

[package.metadata.android.application.activity]
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true

[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.PASSTHROUGH"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.experimental.enabled"
required = true

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "com.oculus.intent.category.VR",
    "android.intent.category.LAUNCHER",
    "org.khronos.openxr.intent.category.IMMERSIVE_HMD",
]

[package.metadata.android.signing.release]
path = "../../../keystore.jks"
keystore_password = "test1234"
